--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      var ifrm = document.createElement("iframe");
+      ifrm.setAttribute(
+        "src",
+        "http://webchat.mandeumzap.com.br/widgets/9d00c36b-950a-458e-a5fa-d41fbff728c8"
+      );
+      ifrm.style.width = "375px";
+      ifrm.style.height = "680px";
+      ifrm.frameBorder = "0";
+      ifrm.style.position = "fixed";
+      ifrm.style.right = "5px";
+      ifrm.style.bottom = "0";
+      document.body.appendChild(ifrm);
+    </script>
   </body>
 </html>
